<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalendarApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_notes">Show notes</string>
    <string name="add_note">Add note</string>
    <string name="title_activity_note_details">Details</string>
    <string name="note_title">title</string>
    <string name="note_content">content</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="title_activity_calendar">Tiny organizer</string>
    <string name="action_note_in_short">title</string>
    <string name="msg_saved">Saved</string>
    <string name="msg_failed">Please maintain a note</string>
    <string name="msg_deleted">Deleted</string>
    <string name="msg_not_saved">Can`t deleted, press \'Cancel\'</string>

</resources>
