<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="tk.calendar.app.NoteDetailsActivity">


    <EditText
            android:text=""
            android:id="@+id/etxtNoteTitleDetails"
            android:layout_width="match_parent"
            android:hint="@string/note_title"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/etxtNoteContentDetails"
            android:hint="@string/note_content"
            android:layout_below="@+id/etxtNoteTitleDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="10"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@id/etxtNoteContentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNoteDate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic"
            android:text="Now"
            />

    <LinearLayout
            android:weightSum="3"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/btn_save"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/btnSaveNote"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                android:id="@+id/btnCancel"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/btn_delete"
                android:id="@+id/btnDelete"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>
